# rawCbackend

./: CMakeLists.txt  README.md
backend/src/: main  main.cpp
modules/cl9s/: request_response.cpp  statuscode.h  teapot.cpp  teapot.h  teapot_client.h  teapot_client_loop.cpp  teapot_server.cpp  teapot_server.h  teapot_server_static.cpp  teapot_server_thread.cpp
modules/cl9s/content/: content_types.cpp  content_types.h
modules/cl9s/request/: request.cpp  request.h  request_body.cpp
modules/cl9s/response/: response.cpp  response.h
modules/file/: filereader.cpp  filereader.h
modules/strdup_raii/: strdup_raii.h
public/: index.html
